--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,29 +12,29 @@
             <!--{% endif %}-->
             
             {% if page.permalink == "/publications/" %}
-            <li class="menu__entry current"><a href="{{ '/publications' | prepend: site.baseurl }}" style="border-color: orange">Publicaciones</a></li>
+            <li class="menu__entry current"><a href="{{ '/publications' | prepend: site.baseurl }}" style="border-color: orange">Publications</a></li>
             {% else %}
-            <li class="menu__entry"><a href="{{ '/publications' | prepend: site.baseurl }}" style="border-color: orange">Publicaciones</a></li>
+            <li class="menu__entry"><a href="{{ '/publications' | prepend: site.baseurl }}" style="border-color: orange">Publications</a></li>
             {% endif %}
             
             {% if page.permalink == "/team/" %}
-            <li class="menu__entry current"><a href="{{ '/team' | prepend: site.baseurl }}" style="border-color: green">Personal</a></li>
+            <li class="menu__entry current"><a href="{{ '/team' | prepend: site.baseurl }}" style="border-color: green">Team</a></li>
             {% else %}
             <li class="menu__entry"><a href="{{ '/team' | prepend: site.baseurl }}" style="border-color: green">Personal</a></li>
             {% endif %}
             
             {% if page.permalink == "/projects/" %}
-            <li class="menu__entry current"><a href="{{ '/projects' | prepend: site.baseurl }}" style="border-color: dodgerblue">Proyectos</a></li>
+            <li class="menu__entry current"><a href="{{ '/projects' | prepend: site.baseurl }}" style="border-color: dodgerblue">Projects</a></li>
             {% else %}
-            <li class="menu__entry"><a href="{{ '/projects' | prepend: site.baseurl }}" style="border-color: dodgerblue">Proyectos</a></li>
+            <li class="menu__entry"><a href="{{ '/projects' | prepend: site.baseurl }}" style="border-color: dodgerblue">Projects</a></li>
             {% endif %}
             
             <li class="menu__entry"><a href="http://isp-utb.github.io/seminario/" target="_blank" style="border-color: red">Seminario</a></li>
             
             {% if page.permalink == "/teaching/" %}
-            <li class="menu__entry current"><a href="{{ '/teaching' | prepend: site.baseurl }}" style="border-color: purple">Docencia</a></li>
+            <li class="menu__entry current"><a href="{{ '/teaching' | prepend: site.baseurl }}" style="border-color: purple">Teaching</a></li>
             {% else %}
-            <li class="menu__entry"><a href="{{ '/teaching' | prepend: site.baseurl }}" style="border-color: purple">Docencia</a></li>
+            <li class="menu__entry"><a href="{{ '/teaching' | prepend: site.baseurl }}" style="border-color: purple">Teaching</a></li>
             {% endif %}
             <li class="menu__entry"><a href="http://github.com/opi-lab/lab-docs/wiki" target="_blank" style="border-color: gray">Wiki</a></li>
         </ul>
