--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
             {% if page.permalink == "/team/" %}
             <li class="menu__entry current"><a href="{{ '/team' | prepend: site.baseurl }}" style="border-color: green">Team</a></li>
             {% else %}
-            <li class="menu__entry"><a href="{{ '/team' | prepend: site.baseurl }}" style="border-color: green">Personal</a></li>
+            <li class="menu__entry"><a href="{{ '/team' | prepend: site.baseurl }}" style="border-color: green">Team</a></li>
             {% endif %}
             
             {% if page.permalink == "/projects/" %}
