--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
             <li class="menu__entry"><a href="{{ '/projects' | prepend: site.baseurl }}" style="border-color: dodgerblue">Projects</a></li>
             {% endif %}
             
-            <li class="menu__entry"><a href="http://isp-utb.github.io/seminario/" target="_blank" style="border-color: red">Seminario</a></li>
+            <li class="menu__entry"><a href="http://isp-utb.github.io/seminario/" target="_blank" style="border-color: red">Seminar</a></li>
             
             {% if page.permalink == "/teaching/" %}
             <li class="menu__entry current"><a href="{{ '/teaching' | prepend: site.baseurl }}" style="border-color: purple">Teaching</a></li>
