--- a/_includes/externals/styling.html
+++ b/_includes/externals/styling.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="{{ "/assets/vendor/normalize-css/normalize.css" | prepend: site.url }}">
 <!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
 <link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.url }}">
+<link rel="stylesheet" href="{{ "/css/flag-icon.css" | prepend: site.url }}">
 {% if site.styles contains site.highlightstyle %}
   <link rel="stylesheet" href="{{ site.url }}/assets/vendor/highlight/styles/{{ site.highlightstyle }}.css">
 {% else %}
