--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,6 +37,8 @@
             <li class="menu__entry"><a href="{{ '/teaching' | prepend: site.baseurl }}" style="border-color: purple">Teaching</a></li>
             {% endif %}
             <li class="menu__entry"><a href="http://github.com/opi-lab/lab-docs/wiki" target="_blank" style="border-color: gray">Wiki</a></li>
+			            <li class="menu__entry"><a href="{site.baseurl}" target="_blank" style="border-color: gray">Español</a></li>
+			
         </ul>
     </div>
 
@@ -52,10 +54,6 @@
                 <i class="fa fa-twitter"></i>
             </a>
         {% endif %}
-		
-        <a href="site.baseurl" class="social-links__entry">
-            <span class="">Español</span>
-        </a>
     </ul>
 	
 <!-- <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'> -->
