--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,21 +12,21 @@
             <!--{% endif %}-->
             
             {% if page.permalink == "/publications/" %}
-            <li class="menu__entry current"><a href="{{ '/publications' | prepend: site.baseurl }}" style="border-color: orange">Publications</a></li>
+            <li class="menu__entry current"><a href="{{ '/en/publications' | prepend: site.baseurl }}" style="border-color: orange">Publications</a></li>
             {% else %}
-            <li class="menu__entry"><a href="{{ '/publications' | prepend: site.baseurl }}" style="border-color: orange">Publications</a></li>
+            <li class="menu__entry"><a href="{{ '/en/publications' | prepend: site.baseurl }}" style="border-color: orange">Publications</a></li>
             {% endif %}
             
             {% if page.permalink == "/team/" %}
-            <li class="menu__entry current"><a href="{{ '/team' | prepend: site.baseurl }}" style="border-color: green">Team</a></li>
+            <li class="menu__entry current"><a href="{{ '/en/team' | prepend: site.baseurl }}" style="border-color: green">Team</a></li>
             {% else %}
             <li class="menu__entry"><a href="{{ '/team' | prepend: site.baseurl }}" style="border-color: green">Team</a></li>
             {% endif %}
             
             {% if page.permalink == "/projects/" %}
-            <li class="menu__entry current"><a href="{{ '/projects' | prepend: site.baseurl }}" style="border-color: dodgerblue">Projects</a></li>
+            <li class="menu__entry current"><a href="{{ '/en/projects' | prepend: site.baseurl }}" style="border-color: dodgerblue">Projects</a></li>
             {% else %}
-            <li class="menu__entry"><a href="{{ '/projects' | prepend:site.baseurl }}" style="border-color: dodgerblue">Projects</a></li>
+            <li class="menu__entry"><a href="{{ '/en/projects' | prepend:site.baseurl }}" style="border-color: dodgerblue">Projects</a></li>
             {% endif %}
             
             <li class="menu__entry"><a href="http://isp-utb.github.io/seminario/" target="_blank" style="border-color: red">Seminar</a></li>
@@ -36,8 +36,9 @@
             {% else %}
             <li class="menu__entry"><a href="{{ '/teaching' | prepend:site.baseurl }}" style="border-color: purple">Teaching</a></li>
             {% endif %}
-            <li class="menu__entry"><a href="http://github.com/opi-lab/lab-docs/wiki" target="_blank" style="border-color: gray">Wiki</a></li>
-			            <li class="menu__entry"><a href="{{site.baseurl}}" target="_blank" style="border-color: gray">Español</a></li>
+
+            <!-- <li class="menu__entry"><a href="http://github.com/opi-lab/lab-docs/wiki" target="_blank" style="border-color: gray">Wiki</a></li> -->
+            <li class="menu__entry"><a href="/" style="border-color: gray">Español</a></li>
 			
         </ul>
     </div>
