--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,9 +24,9 @@
             {% endif %}
             
             {% if page.permalink == "/research/" %}
-            <li class="menu__entry current"><a href="{{ '/en/research' | prepend: site.baseurl }}" style="border-color: dodgerblue">Projects</a></li>
+            <li class="menu__entry current"><a href="{{ '/en/research' | prepend: site.baseurl }}" style="border-color: dodgerblue">Research</a></li>
             {% else %}
-            <li class="menu__entry"><a href="{{ '/en/research' | prepend:site.baseurl }}" style="border-color: dodgerblue">Projects</a></li>
+            <li class="menu__entry"><a href="{{ '/en/research' | prepend:site.baseurl }}" style="border-color: dodgerblue">Research</a></li>
             {% endif %}
             
             <li class="menu__entry"><a href="http://isp-utb.github.io/seminario/" target="_blank" style="border-color: red">Seminar</a></li>
