--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="navigation">
-        <a href="/" class="logo">{{ site.title }}</a>
+        <a href="/en/" class="logo">{{ site.title }}</a>
 		<!-- <a href="/" class="logo"><img src="/images/logo_50dpi.png" alt="" width="" height="100px" border="0" /></a> -->
 
         <ul class="menu">
